# dim-browsers-kwin-effect

./: contents  install.sh  metadata.json
archive/dim-browsers-configable-test/: metadata.json
archive/dim-browsers-configable-test/contents/code/: effect.js
archive/dim-browsers-configable-test/contents/config/: main.xml
archive/dim-browsers-configable-test/contents/ui/: config.ui
archive/dim-browsers-opengl/contents/shaders/: darken.frag
dim-browsers/: CMakeLists.txt  build.sh  install.sh  install_kcm.sh  metadata.json
dim-browsers-opengl/: metadata.json
dim-browsers-standard/: CMakeLists.txt  metadata.json
dim-browsers-standard/contents/code/: effect.js
dim-browsers-v2/: build.sh
dim-browsers-v2/contents/code/: effect.js
dim-browsers/contents/code/: main.js
dim-browsers/contents/config/: main.xml
dim-browsers/contents/shaders/: darken.frag
dim-browsers/contents/ui/: config.ui
dim-browsers/kcms/kcm_kwin4_dim_browsers/: kcm_kwin4_dim_browsers.qml  main.xml  metadata.json
dim-browsers/kcms/kcm_kwin4_dim_browsers/contents/config/: main.xml
dim-browsers/kcms/kcm_kwin4_dim_browsers/contents/ui/: main.qml
